syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

import "model/order.proto";

message GetAllOrderResponse {
  int32 total = 1;
  int32 offset = 2;
  int32 limit = 3;
  repeated Order orders = 4;
}

message Order {
  string id = 1;
  string startDate = 2;
  string endDate = 3;
  Product product = 4;
  Address address = 5;
  string createdAt = 6;
  string updatedAt = 7;
  string deliverymanId = 8;
  string canceledAt = 9;
}